--- a/css/annonce.css
+++ b/css/annonce.css
@@ -1,7 +1,7 @@
 body{
-	background-image:url('/G2/img/paquerettes3-2.jpg');
+	background-image:url('/G4/img/paquerettes3-2.jpg');
 	background-attachment:scroll;
-	background-size:110% 110%;
+	background-size:100% 100%;
 	background-repeat:no-repeat;
 	background-position:center center;
 	font-family:Arial, Helvetica, sans-serif;
@@ -9,7 +9,7 @@ body{
 
 .content{
 	margin-bottom:0px;
-	background-color:rgba(223,223,223,0.5);
+	background-color:rgba(223,223,223,0.8);
 	padding:1em;
 	position: relative;
 	float:left;
@@ -20,13 +20,45 @@ body{
 	left: 100px;
 }
 
+
+.nav {
+	list-style-type:none;
+	margin:0;
+	padding:0;
+	overflow:hidden;
+		
+}
+
+a:link,a:visited
+	{
+	display:block;
+	width:120px;
+	font-weight:bold;
+	color:#FFFFFF;
+	background-color:#66CCFF;
+	text-align:center;
+	padding:4px;
+	text-decoration:none;
+	text-transform:uppercase;
+}
+a:hover,a:active
+{
+background-color:#6699FF;
+}
+
+.nav .nav-item {
+    float: left;
+}
+
+
+
 .user{
 	padding-right:10px;
 	background-color:#0881A5;
 	position:fixed;
 	width: 1074px;
 	top: 0px;
-	left: 107px;
+	left: 100px;
 	right:50px;
 	height: 30px;
 	color: #EDEDED;
@@ -49,7 +81,7 @@ body{
 	width:180px;
 	height:114px;
 	position: relative;
-	left: 70px;
+	left: 750px;
 	top: 7px;
 }
 
