--- a/css/basecss.css
+++ b/css/basecss.css
@@ -4,6 +4,19 @@
 	
 	}
 	
+.TopLine{
+	margin-left:-1%;
+	margin-top:-1%;
+	margin-bottom:2%;
+	width:98%;
+	padding:0.5% 2% 0.5% 2%;
+	background-color:lightGrey;
+}
+.TopPrix{
+	float:right;
+	display:inline;
+	text-align:right;
+	
 .annoncessimilaires{
 	padding:1%;
 	border:1px solid black;
@@ -19,5 +32,5 @@
 	display:inline-block;
 }
 .AutreAnnonce{
-	margin:30% 10% 10% 10%;
+	margin:38% 10% 10% 10%;
 }
