--- a/css/basecss.css
+++ b/css/basecss.css
@@ -29,13 +29,13 @@
 	margin-bottom:2%;
 	width:98%;
 	padding:0.5% 2% 0.5% 2%;
-	background-color:lightGrey;
+	background-color:lightBlue;
 }
 .TopPrix{
 	float:right;
 	display:inline;
 	text-align:right;
-	
+}
 .annoncessimilaires{
 	padding:1%;
 	border:1px solid black;
@@ -51,9 +51,9 @@
 	display:inline-block;
 }
 .AutreAnnonce{
-	margin:38% 10% 10% 10%;
-	
+	margin:75% 10% 10% 10%;
 }
+
 
 
 
