--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+
+html{
+	height:100%;
+}
 body{
 	background-image:url('/G2/img/paquerettes3-2.jpg');
 	background-attachment:scroll;
@@ -5,6 +9,7 @@ body{
 	background-repeat:no-repeat;
 	background-position:center center;
 	font-family:Arial, Helvetica, sans-serif;
+	height:100%;
 }
 
 .content{
