--- a/css/cssRoxana.css
+++ b/css/cssRoxana.css
@@ -111,6 +111,10 @@ text-align: center;
 	bottom:4px;
 	float:left;
 	width: :55%;
+	padding-top:25px;
+	padding-bottom:25px;
+	padding-right:50px;
+	padding-left:50px;
 }
 	
 .contactBox{
