--- a/css/mesFavorisRecherches.css
+++ b/css/mesFavorisRecherches.css
@@ -1,5 +1,5 @@
 body{
-	background-image:url('/G2/img/paquerettes3-2.jpg');
+	background-image:url('/img/paquerettes3-2.jpg');
 	background-attachment:scroll;
 	background-size:110% 110%;
 	background-repeat:no-repeat;
