--- a/css/annonce.css
+++ b/css/annonce.css
@@ -191,7 +191,7 @@ background-color:#6699FF;
     text-align:center;
     display: inline-block;
     float:right;
-    margin:0 8px 0 0;
+    margin:0 8px 5em 0;
     border-radius:7px;
     font-size: 0.85em;
     width:120px;
