--- a/css/annonce.css
+++ b/css/annonce.css
@@ -7,6 +7,11 @@ body{
 	font-family:Arial, Helvetica, sans-serif;
 }
 
+.h2{
+	color: #6699FF;
+}
+
+
 .content{
 	margin-bottom:0px;
 	background-color:rgba(223,223,223,0.8);
