--- a/css/cssRoxana.css
+++ b/css/cssRoxana.css
@@ -1,5 +1,5 @@
 body{
-	background-image:url('/G10/img/paquerettes3-2.jpg');
+	background-image:url('/G10/img/img/paquerettes3-2.jpg');
 	background-attachment:scroll;
 	background-size:110% 110%;
 	background-repeat:no-repeat;
