--- a/css/cssRoxana.css
+++ b/css/cssRoxana.css
@@ -101,6 +101,20 @@ body{
 	float:right;
 	width: 75%;
 }
+
+.box2{
+	position:relative;
+	border: solid 2px  #0881A5;
+	background-color:#FFF;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-box-shadow: 5px 5px 10px black;
+	center: 20px;
+	bottom: 5px;
+	float:right;
+	width: 75%;
+}
 .texto{
 	text-align: center;
 {
@@ -125,7 +139,7 @@ body{
 	-moz-border-radius: 10px;
 	border-radius: 10px;
 	-webkit-box-shadow: 5px 5px 10px black;
-	center: 95px;
+	center: 20px;
 	bottom: 85px;
 	float:right;
 	width: 75%;
