--- a/css/creerAnnonce.css
+++ b/css/creerAnnonce.css
@@ -1,5 +1,5 @@
 body{
-	background-image:url('/G4/img/paquerettes3-2.jpg');
+	background-image:url('/img/paquerettes3-2.jpg');
 	background-attachment:scroll;
 	background-size:100% 100%;
 	background-repeat:no-repeat;
