--- a/css/afficherAnnonces.css
+++ b/css/afficherAnnonces.css
@@ -17,7 +17,7 @@ html {
 }
 
 body{
-	background-image:url('/G1/img/paquerettes3-2.jpg');
+	background-image:url('/img/paquerettes3-2.jpg');
 	background-attachment:fixed;
 	background-size:110% 110%;
 	background-repeat:no-repeat;
