--- a/css/moncompte.css
+++ b/css/moncompte.css
@@ -1,17 +1,14 @@
 html{
-	height:100%;
-	width: 100%;
+	height:100%;	
 }
 
 body{
-
 	background-image:url('/img/paquerettes3-2.jpg');
 	background-attachment:scroll;
-	background-size:100% 100%;
+	background-size:150% 150%;
 	background-repeat:no-repeat;
-	background-position:center center;
+	background-position:10% 0px;
 	font-family:Arial, Helvetica, sans-serif;
-	height:100%;
 }
 
 .content{
@@ -19,10 +16,10 @@ body{
 	padding:1em;
 	position: absolute;
 	float:left;
-	height: 100%;
-	top: 0%;
+	top: 0px;
 	left: 8%;
 	width: 80%;
+	height: 130%;
 }
 
 .user{
@@ -68,11 +65,10 @@ body{
 	border-radius: 10px;
 	-webkit-box-shadow: 5px 5px 10px black;
 	-moz-box-shadow: 5px 5px 10px black;
-	left: 15em;
-	bottom: 1em;
+	left: 250px;
+	bottom: 10px;
 	float:left;
-	width: 12em;
-	height: 12em;
+	width: 300px;
 }
 
 .box3{
@@ -84,11 +80,15 @@ body{
 	border-radius: 10px;
 	-webkit-box-shadow: 5px 5px 10px black;
 	-moz-box-shadow: 5px 5px 10px black;
-	left: 400px;
+	left: 300px;
 	bottom: 10px;
 	float:left;
-	width: 200px;
-	height: 200px;
+	width: 300px;
+	padding-bottom:20px;
+}
+
+p{
+	font-size: 80%;
 }
 
 .box4{
@@ -100,11 +100,11 @@ body{
 	border-radius: 10px;
 	-webkit-box-shadow: 5px 5px 10px black;
 	-moz-box-shadow: 5px 5px 10px black;
-	top: 230px;
+	top: 350px;
 	float:left;
 	width: 200px;
 	height: 200px;
-	left: 195px;
+	left: 250px;
 }
 
 .box5{
@@ -119,8 +119,8 @@ body{
 	float:left;
 	width: 200px;
 	height: 200px;
-	right: 312px;
-	top: 230px;
+	right: 700px;
+	top: 350px;
 }
 
 .sub_box1{
@@ -128,7 +128,7 @@ body{
 	-moz-border-radius: 10px;
 	border-radius: 10px;
 	margin-right:auto;
-	margin:30px;
+	margin:20px;
 	padding:10px;
 	border:solid #CBCBCB 1px;
 	padding-bottom: 10px;
