--- a/css/mesAnnonces.css
+++ b/css/mesAnnonces.css
@@ -1,40 +1,44 @@
+html{
+	height:100%;	
+}
+
 body{
 	background-image:url('/img/paquerettes3-2.jpg');
 	background-attachment:scroll;
-	background-size:110% 110%;
+	background-size:150% 150%;
 	background-repeat:no-repeat;
-	background-position:center center;
+	background-position:10% 0px;
 	font-family:Arial, Helvetica, sans-serif;
+	height:100%;
 }
 
 .content{
-	margin-bottom:0px;
 	background-color:rgba(223,223,223,0.5);
 	padding:1em;
-	position: relative;
+	position: absolute;
 	float:left;
-	width: 1050px;
-	height: auto;
-	min-height:700px;
-	top: 10px;
-	left: 100px;
+	top: 0px;
+	left: 8%;
+	width: 80%;
+	height: 130%;
 }
 
 .user{
-	padding-right:10px;
+	padding-right:1%;
 	background-color:#0881A5;
 	position:fixed;
-	width: 1074px;
-	top: 0px;
-	left: 107px;
-	right:50px;
-	height: 30px;
+	float:left;
+	width: 81.5%;
+	left: 8%;
+	height: 5%;
 	color: #EDEDED;
 	text-align:right;
-	margin-bottom: 20px;
-	padding-top: 10px;
+	margin-bottom: 4%;
+	padding-top: 1%;
 	z-index: 999;
+	top: 0px;
 }
+
 
 .accueil{
 	position: relative;
@@ -46,13 +50,12 @@ body{
 
 .logo{
 	padding: 1em;
-	width:180px;
-	height:114px;
+	width:20%;
+	height:20%;
 	position: relative;
-	left: 70px;
-	top: 7px;
+	left: 7%;
+	top: 3%;
 }
-
 .hyperlien1{
 	-moz-box-shadow: 5px 5px 10px black;
 	-webkit-box-shadow: 5px 5px 10px black;
@@ -89,8 +92,8 @@ body{
 	text-shadow:1px 1px 0px #cc9f52;
 	position:absolute;
 	z-index: 10;
-	right: 830px;
-	top: 229px;
+	right: 80%;
+	top: 25%;
 }
 .hyperlien1:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #FFF), color-stop(1, #FFF) );
@@ -135,8 +138,8 @@ body{
 	text-shadow:1px 1px 0px #cc9f52;
 	position:absolute;
 	z-index: 10;
-	right: 830px;
-	top: 280px;
+	right: 80%;
+	top: 30%;
 }
 .hyperlien2:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
@@ -179,8 +182,8 @@ body{
 	text-shadow:1px 1px 0px #cc9f52;
 	position:absolute;
 	z-index: 10;
-	right: 830px;
-	top: 330px;
+	right: 80%;
+	top: 35%;
 }
 .hyperlien3:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
@@ -225,8 +228,8 @@ body{
 	text-shadow:1px 1px 0px #cc9f52;
 	position:absolute;
 	z-index: 10;
-	right: 830px;
-	top: 380px;
+	right: 80%;
+	top: 40%;
 }
 .hyperlien4:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
@@ -246,10 +249,10 @@ body{
 	border-radius: 10px;
 	-webkit-box-shadow: 5px 5px 10px black;
 	-moz-box-shadow: 5px 5px 10px black;
-	left: 300px;
-	bottom: 10px;
+	left: 25%;
+	bottom: 5%;
 	float:left;
-	width: 200px;
+	width: 300px;
 }
 
 .box3{
@@ -261,11 +264,17 @@ body{
 	border-radius: 10px;
 	-webkit-box-shadow: 5px 5px 10px black;
 	-moz-box-shadow: 5px 5px 10px black;
-	left: 400px;
-	bottom: 10px;
+	left: 30%;
+	bottom: 5%;
 	float:left;
-	width: 200px;
+	width: 300px;
+	padding-bottom:20px;
 }
+
+p{
+	font-size: 80%;
+}
+
 
 .sub_box1{
 	-webkit-border-radius: 10px;
