--- a/css/adminMainLayout.css
+++ b/css/adminMainLayout.css
@@ -3,7 +3,7 @@
 body {
 	background-image:url('../img/paquerettes3-2.jpg');
 	background-attachment:scroll;
-	background-size:110% 110%;
+	background-size:auto auto;
 	background-repeat:no-repeat;
 	background-position:center center;
 	font-family: Arial, Helvetica, sans-serif;
