--- a/css/moncompte.css
+++ b/css/moncompte.css
@@ -61,6 +61,7 @@ body{
 	position:relative;
 	border: solid 2px  #0881A5;
 	background-color:#FFF;
+	opacity:0.75;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
@@ -70,12 +71,14 @@ body{
 	bottom: 5%;
 	float:left;
 	width: 300px;
+	height:270px;
 }
 
 .box3{
 	position:relative;
 	border: solid 2px  #0881A5;
 	background-color:#FFF;
+	opacity:0.75;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
@@ -85,7 +88,7 @@ body{
 	bottom: 5%;
 	float:left;
 	width: 300px;
-	padding-bottom:20px;
+	height:270px;
 }
 
 p{
@@ -96,6 +99,7 @@ p{
 	position:relative;
 	border: solid 2px  #0881A5;
 	background-color:#FFF;
+	opacity:0.75;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
@@ -111,6 +115,7 @@ p{
 	position:relative;
 	border: solid 2px  #0881A5;
 	background-color:#FFF;
+	opacity:0.75;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
@@ -132,6 +137,7 @@ p{
 	border:solid #CBCBCB 1px;
 	padding-bottom: 10px;
 	position: relative;	
+	text-align:center;
 }
 
 .sub_box2{
