--- a/css/mesAnnonces.css
+++ b/css/mesAnnonces.css
@@ -4,10 +4,10 @@ html{
 
 body{
 	background-image:url('/img/paquerettes3-2.jpg');
-	background-attachment:scroll;
-	background-size:150% 150%;
+	background-attachment:fixed;
+	background-size:110% 110%;
 	background-repeat:no-repeat;
-	background-position:10% 0px;
+	background-position:center center;
 	font-family:Arial, Helvetica, sans-serif;
 	height:100%;
 }
@@ -93,7 +93,7 @@ body{
 	position:absolute;
 	z-index: 10;
 	right: 80%;
-	top: 25%;
+	top: 30%;
 }
 .hyperlien1:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #FFF), color-stop(1, #FFF) );
@@ -139,7 +139,7 @@ body{
 	position:absolute;
 	z-index: 10;
 	right: 80%;
-	top: 30%;
+	top: 35%;
 }
 .hyperlien2:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
@@ -183,7 +183,7 @@ body{
 	position:absolute;
 	z-index: 10;
 	right: 80%;
-	top: 35%;
+	top: 40%;
 }
 .hyperlien3:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
@@ -229,7 +229,7 @@ body{
 	position:absolute;
 	z-index: 10;
 	right: 80%;
-	top: 40%;
+	top: 45%;
 }
 .hyperlien4:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
@@ -244,6 +244,7 @@ body{
 	position:relative;
 	border: solid 2px  #0881A5;
 	background-color:#FFF;
+	opacity:0.75;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
@@ -253,12 +254,14 @@ body{
 	bottom: 5%;
 	float:left;
 	width: 300px;
+	height:270px;
 }
 
 .box3{
 	position:relative;
 	border: solid 2px  #0881A5;
 	background-color:#FFF;
+	opacity:0.75;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
 	border-radius: 10px;
@@ -268,7 +271,7 @@ body{
 	bottom: 5%;
 	float:left;
 	width: 300px;
-	padding-bottom:20px;
+	height:270px;
 }
 
 p{
