--- a/css/mesAnnoncesArchives.css
+++ b/css/mesAnnoncesArchives.css
@@ -4,10 +4,10 @@ html{
 
 body{
 	background-image:url('/img/paquerettes3-2.jpg');
-	background-attachment:scroll;
-	background-size:150% 150%;
+	background-attachment:fixed;
+	background-size:110% 110%;
 	background-repeat:no-repeat;
-	background-position:10% 0px;
+	background-position:center center;
 	font-family:Arial, Helvetica, sans-serif;
 	height:100%;
 }
@@ -93,7 +93,7 @@ body{
 	position:absolute;
 	z-index: 10;
 	right: 80%;
-	top: 25%;
+	top: 30%;
 }
 .hyperlien1:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #FFF), color-stop(1, #FFF) );
@@ -139,7 +139,7 @@ body{
 	position:absolute;
 	z-index: 10;
 	right: 80%;
-	top: 30%;
+	top: 35%;
 }
 .hyperlien2:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
@@ -183,7 +183,7 @@ body{
 	position:absolute;
 	z-index: 10;
 	right: 80%;
-	top: 35%;
+	top: 40%;
 }
 .hyperlien3:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
@@ -229,7 +229,7 @@ body{
 	position:absolute;
 	z-index: 10;
 	right: 80%;
-	top: 40%;
+	top: 45%;
 }
 .hyperlien4:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
